<resources>
    <string name="app_name">AndroidKotlinProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_signup">Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="title_login">Login</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="fname">First name</string>
    <string name="error_network">Une erreur est survenue lors de la connexion.</string>
    <string name="hello_user">Bonjour %2$s %2$s</string>

</resources>